src/static/site/css/main.css
html, body{
    height:100%;		/* For full height images */
}

.footer {
  padding-top: 40px;
  padding-bottom: 40px;
  margin-top: 40px;
  border-top: 1px solid #eee;
}

.alert {
    margin-top: 55px;
    margin-bottom: 0;
}

/*
 * Sidebar
 */

.sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 100; /* Behind the navbar */
    padding: 0;
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

.sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 70px; /* Height of navbar */
    height: calc(100vh - 70px);
    padding-top: 1rem;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

.sidebar .nav-link {
    font-weight: 500;
    color: #333;
}

.sidebar .nav-link .feather {
    margin-right: 4px;
    color: #999;
}

.sidebar .nav-link.active {
    color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
    color: inherit;
}

.sidebar-heading {
    font-size: .75rem;
    text-transform: uppercase;
}

/*
 * Navbar
 */

.navbar-brand {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: 1rem;
    background-color: rgba(0, 0, 0, .25);
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
}

.navbar .form-control {
    padding: .75rem 1rem;
    border-width: 0;
    border-radius: 0;
}

.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, .1);
    border-color: rgba(255, 255, 255, .1);
}

.form-control-dark:focus {
    border-color: transparent;
    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

/*
 * Utilities
 */

.border-top { border-top: 1px solid #e5e5e5; }
.border-bottom { border-bottom: 1px solid #e5e5e5; }

/* Home page styling */
.corporate-jumbo {
    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
      url("/static/site/img/banner.jpg");
    background-repeat: no-repeat;
    background-position: 80% center;
    background-attachment: fixed;
    -webkit-background-size: cover;
    background-size: cover;
    color: #f5f5f5;
    padding: 10em 0;
    margin-bottom: 0;
    height: 100%;
}

.corporate-jumbo .well {
    background-color: rgba(245, 245, 245, .7);
}

.corporate-jumbo p, .corporate-jumbo h1 {
    color: #eee;
    text-shadow: 0 0 2px black;
}

.corporate-jumbo p {
    font-weight: 500;
}

.corporate-jumbo .well legend {
    color: #333;
}

.corporate-jumbo > .container {
    display: block;
    position: absolute;
    bottom: 2em;
    left: 15px;
}

.footer a:hover {
    text-decoration: none;
}

/* Authentication forms */
.form-box form,
.form-box .form-message {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}

.form-box form .checkbox {
  margin-bottom: 10px;
}

.form-box form .checkbox {
  font-weight: normal;
}

.form-box form .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}

.form-box form .form-control:focus {
  z-index: 2;
}

/* Card view */

.text-left {
    width: 100%
}

.card-view {
    clear: both;
}
.card-view .card-view-title {
    display: block;
    width: 30%;
    float: left;
}
.card-view .card-view-value {
    display: block;
    width: 70%;
    float: right;
}

/* 3-part date widget */
.selectdatewidget {
    display: inline-block;
    min-height: 46px;
}

select[name$="_day"].selectdatewidget {
    width: 27%;
    color: red;
}
select[name$="_month"].selectdatewidget {
    width: 38%;
    color: green;
}
select[name$="_year"].selectdatewidget {
    width: 35%;
    color: blue;
}

.select {
    min-height: 46px;
}

